<resources>

    <!-- WeatherMainInfo Activity -->
    <string name="main_weather_button">Weather App</string>

    <!-- City List -->
    <string name="city_list_informative">Choose one of the cities below or enter \nthe city you want.</string>
    <string name="city_list_city_hint">City name</string>
    <string name="city_list_country_code_hint">Country code</string>
    <string name="city_list_button">Check Weather</string>

    <!-- City Detail-->
    <string name="city_detail_current">Current: </string>
    <string name="city_detail_max">Max: </string>
    <string name="city_detail_min">Min: </string>
    <string name="city_detail_humidity">Humidity: </string>
    <string name="city_detail_pressure">Pressure: </string>

    <!-- Request Error Dialog -->
    <string name="request_error_try_again">Try Again</string>
    <string name="request_error_no_connection">We could not connect. Please chekc your internet</string>
    <string name="request_error_generic_error">We had a smal problem retrieving the requested information.</string>
    <string name="request_error_tittle">SORRY,</string>

</resources>
