<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="rodrigo.zaniolo.myshowcaseapp.utils.FontUtils.FontName"/>
        <import type="android.view.View"/>
        <variable
            name="presenter"
            type="rodrigo.zaniolo.myshowcaseapp.city_list.CityListInterface.Presenter"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_primary"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/myTextViewCityListInformative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cityListInformativeTopMargin"
            android:layout_marginStart="@dimen/cityListInformativeStartMargin"
            android:layout_marginEnd="@dimen/cityListInformativeEndMargin"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/city_list_informative"
            app:font="@{FontName.EXTRABOLD}"/>

        <LinearLayout
            android:id="@+id/myLinearLayoutUsrInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cityListInformativeTopMargin"
            android:layout_marginStart="@dimen/cityListInformativeStartMargin"
            android:layout_marginEnd="@dimen/cityListInformativeEndMargin"
            android:orientation="horizontal"
            android:layout_below="@id/myTextViewCityListInformative"
            android:weightSum="1">


            <EditText
                android:id="@+id/myEditTextCityListCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/shape_underline_white"
                android:gravity="center"
                android:hint="@string/city_list_city_hint"
                android:textColorHint="@color/whiteDarkened"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:font="@{FontName.EXTRABOLD}"/>

            <EditText
                android:id="@+id/myEditTextCityListCountryCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/shape_underline_white"
                android:layout_marginStart="@dimen/cityListInformativeStartMargin"
                android:gravity="center"
                android:hint="@string/city_list_country_code_hint"
                android:textColorHint="@color/whiteDarkened"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:font="@{FontName.EXTRABOLD}"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/myRelativeLayoutButton"
            android:layout_below="@+id/myLinearLayoutUsrInputContainer"
            style="@style/AppTheme.RelativeLayout.App.Button.White"
            android:gravity="center"
            android:clickable="@{!presenter.isRunning()}"
            android:layout_centerHorizontal="true"
            android:onClick="@{presenter.onCheckWeather()}">

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:visibility="@{presenter.isRunning() ? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/myTextViewIncomeInformationNext"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:visibility="@{presenter.isRunning() ? View.GONE : View.VISIBLE}"
                android:text="@string/city_list_button"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                app:font="@{FontName.BOLD}"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/cityListOptionsTopMargin"
            android:layout_below="@id/myRelativeLayoutButton"
            app:setUpRecyclerViewConfiguration="@{presenter.getRecyclerConfiguration()}"/>
    </RelativeLayout>
</layout>
